devops_manifests/delivery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: farrux-test
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: delivery
