devops_manifests/delivery-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-ingress
  namespace: farrux-test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: farrux-test.ucode.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: delivery-service
                port:
                  number: 8080
